# ha-powerpetdoor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO  constraints.txt  hacs.json  manifest.json  pyproject.toml  pytest.ini  requirements-dev.txt  switch.py
.gitea/workflows/: sync-wiki.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: hass.yml  hcas.yml
custom_components/: __init__.py
custom_components/powerpetdiir/: manifest.json
custom_components/powerpetdoor/: __init__.py  button.py  client.py  config_flow.py  const.py  cover.py  manifest.json  number.py  petdoor.py  schedule.py  schema.py  select.py  sensor.py  services.yaml  strings.json  switch.py  tz_utils.py  websocket.py
custom_components/powerpetdoor/translations/: en.json
tests/: __init__.py  conftest.py  test_client.py  test_config_flow.py  test_cover.py  test_schedule.py  test_sensor.py  test_simulator.py  test_switch.py
www/: powerpetdoor-schedule-card.js
