[project]
name = "ha-powerpetdoor"
version = "0.5.0"
description = "Home Assistant integration for Power Pet Door"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Preston Elder", email = "prez@neuromancy.net"}
]
requires-python = ">=3.12"

# Runtime dependencies are managed by Home Assistant via manifest.json
# These are just for reference/development
dependencies = [
    "pypowerpetdoor>=0.1.0",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "syrupy>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
